# ustc-cminus

./: .gitattributes  .gitignore  CMakeLists.txt
include/cminusfc/: cminusf_builder.hpp
include/common/: ast.hpp  myassert.h
include/front/: CminusFlexLexer.hpp  driver.hpp  location.hh  syntax_analyzer.hpp
include/lightir/: BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  Instruction.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp
include/passes/: Dominators.hpp  Mem2Reg.hpp
src/cminusfc/: CMakeLists.txt  cminusf_builder.cpp  cminusfc.cpp
src/codegen/: CodeGen.cpp
src/common/: CMakeLists.txt  ast.cpp  logging.cpp
src/io/: CMakeLists.txt  io.c  io.h
src/lightir/: BasicBlock.cpp  Constant.cpp  Function.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  User.cpp
src/logging/: CMakeLists.txt
src/parser/: CMakeLists.txt  driver.cpp  lexer.cpp  lexical_analyzer.l  parser.cpp  syntax_analyzer.y
src/passes/: DeadCode.cpp  Dominators.cpp  FuncInfo.cpp  Mem2Reg.cpp
tests/: eval.py
tests/2-ir-gen/autogen/: eval_lab2.py
tests/2-ir-gen/autogen/testcases/lv3/: complex4.cminus
tests/2-ir-gen/warmup/: CMakeLists.txt
tests/my/: def_in_inner_scope.cminus  if_test.cminus  mem2reg_while.cminus  return_twice.cminus  while_test.cminus
tests/section1/functional_test/: 07_comment1.ll  14_or.ll  16_nequal.ll  45_equal_prior_logic.ll  62_long_code.sy  65_word_count.ll  98_many_local_var.ll
tests/section1/performance_test/: 03_sort2.sy
tests/section2/performance_test/: conv0.sy
